# iomx

./: .gitignore  README.md  gen.py  pyproject.toml  requirements.txt
docs/: conf.py  index.md  installation.md  requirements.txt  usage.md
iomx/: cli.py  core.py
iomx/commands/: __init__.py  lsserial.py  mqtt.py  serial.py  websocket.py
iomx/commands/mqtt/: __init__.py  main.py
iomx/commands/serial/: __init__.py  ls.py
iomx/commands/ws/: __init__.py  main.py
iomx/gui/: __init__.py
iomx/output/: __init__.py
iomx/protocols/: __init__.py  serial.py
iomx/tui/: __init__.py  app.py
tests/: test_cli.py  test_ws.py
